[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freshmeat-heikinashi"
dynamic = ["version"]
description = "Fast Heikin-Ashi candle computation with Numba JIT acceleration."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Yalçın AÇIKYILDIZ", email = "yalcin@webliyacelebi.com" },
]
keywords = ["heikin-ashi", "trading", "numba", "technical-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/yalcin/freshmeat-heikinashi"
Repository = "https://github.com/yalcin/freshmeat-heikinashi"
Issues = "https://github.com/yalcin/freshmeat-heikinashi/issues"
Changelog = "https://github.com/yalcin/freshmeat-heikinashi/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/freshmeat_heikinashi"]

[tool.hatch.version]
path = "src/freshmeat_heikinashi/__init__.py"

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "D",         # pydocstyle
    "UP",        # pyupgrade
    "S",         # bandit (security)
    "B",         # bugbear
    "A",         # builtins
    "C4",        # comprehensions
    "SIM",       # simplify
    "RUF",       # ruff-specific
]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D102", "D103"]
"benchmarks/**/*.py" = ["S101", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=freshmeat_heikinashi --cov-report=term-missing"
